Incremental update for Problem 05 and 06

--- a/CM03/Aphasia_MPT.ipynb
+++ b/CM03/Aphasia_MPT.ipynb
@@ -96,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./assets/aphasia.png\" width=80% height=80% />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -122,7 +129,7 @@
     "transformed parameters {\n",
     "  simplex[K] theta;\n",
     "  theta[1] = 1 - a;\n",
-    "  theta[2] = a * (1 - b * c) * (1 - f) * (1 - h);\n",
+    "  theta[2] = a * (1 - f) * (1 - h) * (1 - b * c);\n",
     "  theta[3] = a * ((1 - b) * f + (1 - b * c) * (1 - f) * h);\n",
     "  theta[4] = a * b * (1 - c) * f;\n",
     "  theta[5] = a * b * c * ((1 - d) * f + (1 - d * e * f) * (1 - f) * g);\n",
