Updated notebook for Problem 03 and 05 in CM03

--- a/CM03/Bayesian_Insurance.ipynb
+++ b/CM03/Bayesian_Insurance.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 0: Data Exploration"
+    "## Part 0: Data Preprocessing"
    ]
   },
   {
@@ -45,12 +45,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reading in the data\n",
     "data = pd.read_csv('./data/insurance.csv', delimiter=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1226</th>\n",
+       "      <td>38</td>\n",
+       "      <td>male</td>\n",
+       "      <td>16.815</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>6640.54485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>856</th>\n",
+       "      <td>48</td>\n",
+       "      <td>female</td>\n",
+       "      <td>33.110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>40974.16490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>992</th>\n",
+       "      <td>50</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>10118.42400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>59</td>\n",
+       "      <td>female</td>\n",
+       "      <td>32.395</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>14590.63205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>63</td>\n",
+       "      <td>male</td>\n",
+       "      <td>36.765</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>13981.85035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      age     sex     bmi  children smoker     region      charges\n",
+       "1226   38    male  16.815         2     no  northeast   6640.54485\n",
+       "856    48  female  33.110         0    yes  southeast  40974.16490\n",
+       "992    50  female  31.600         2     no  southwest  10118.42400\n",
+       "267    59  female  32.395         3     no  northeast  14590.63205\n",
+       "343    63    male  36.765         0     no  northeast  13981.85035"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inspecting the content of the data\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -59,33 +169,30 @@
        "(1338, 7)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Inspecting how much data there is\n",
     "data.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(338, 7)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Perform a train-test split\n",
+    "Here, we perform a train-test split by reshuffling the data and roughly split them so that 70% of the dataset is used for training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform a train-test split with a simple cutoff index 1000.\n",
     "data = shuffle(data)\n",
     "train_data = data[0:1000]\n",
     "test_data  = data[1000:]"
