Added notebook for experimental gaze simulator

--- a/FinalProject/exploration/data_exploration.ipynb
+++ b/FinalProject/exploration/data_exploration.ipynb
@@ -16,22 +16,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4178, 18)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('../data/subjects-xy/subject1_1.csv', delimiter=\";\")\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Lap_Number</th>\n",
+       "      <th>Position.x.</th>\n",
+       "      <th>Position.y.</th>\n",
+       "      <th>Position.z.</th>\n",
+       "      <th>Orientation.x.</th>\n",
+       "      <th>Orientation.y.</th>\n",
+       "      <th>Orientation.z.</th>\n",
+       "      <th>Path_Deviation</th>\n",
+       "      <th>Estimated_Path_Center.x.</th>\n",
+       "      <th>Estimated_Path_Center.y.</th>\n",
+       "      <th>Estimated_Path_Center.z.</th>\n",
+       "      <th>Gaze_Location.x.</th>\n",
+       "      <th>Gaze_Location.y.</th>\n",
+       "      <th>Gaze_Location.z.</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Gaze.x.</th>\n",
+       "      <th>Gaze.y.</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1688764397516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.2258</td>\n",
+       "      <td>-182.7814</td>\n",
+       "      <td>0.040416</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8565</td>\n",
+       "      <td>-253.5652</td>\n",
+       "      <td>243.8041</td>\n",
+       "      <td>-182.4984</td>\n",
+       "      <td>-271.063129</td>\n",
+       "      <td>350.538543</td>\n",
+       "      <td>-139.081971</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1153.233</td>\n",
+       "      <td>430.5623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1688764397532</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.2678</td>\n",
+       "      <td>-182.7312</td>\n",
+       "      <td>0.057982</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8488</td>\n",
+       "      <td>-253.5728</td>\n",
+       "      <td>243.8095</td>\n",
+       "      <td>-182.4494</td>\n",
+       "      <td>-271.047086</td>\n",
+       "      <td>350.699079</td>\n",
+       "      <td>-138.771214</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1154.365</td>\n",
+       "      <td>431.6732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1688764397548</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.3063</td>\n",
+       "      <td>-182.6703</td>\n",
+       "      <td>0.079175</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8396</td>\n",
+       "      <td>-253.5819</td>\n",
+       "      <td>243.8160</td>\n",
+       "      <td>-182.3899</td>\n",
+       "      <td>-271.031043</td>\n",
+       "      <td>350.859614</td>\n",
+       "      <td>-138.460457</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1155.480</td>\n",
+       "      <td>432.7673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1688764397565</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.3416</td>\n",
+       "      <td>-182.5986</td>\n",
+       "      <td>0.103898</td>\n",
+       "      <td>-3.000000e-08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8286</td>\n",
+       "      <td>-253.5927</td>\n",
+       "      <td>243.8236</td>\n",
+       "      <td>-182.3199</td>\n",
+       "      <td>-271.015000</td>\n",
+       "      <td>351.020150</td>\n",
+       "      <td>-138.149700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1156.576</td>\n",
+       "      <td>433.8441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1688764397582</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.3739</td>\n",
+       "      <td>-182.5163</td>\n",
+       "      <td>0.131965</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8161</td>\n",
+       "      <td>-253.6051</td>\n",
+       "      <td>243.8324</td>\n",
+       "      <td>-182.2395</td>\n",
+       "      <td>-271.015000</td>\n",
+       "      <td>351.020150</td>\n",
+       "      <td>-138.149700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1156.576</td>\n",
+       "      <td>433.8441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1688764397599</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.4035</td>\n",
+       "      <td>-182.4240</td>\n",
+       "      <td>0.163051</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8020</td>\n",
+       "      <td>-253.6190</td>\n",
+       "      <td>243.8423</td>\n",
+       "      <td>-182.1493</td>\n",
+       "      <td>-271.015000</td>\n",
+       "      <td>351.020150</td>\n",
+       "      <td>-138.149700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1156.576</td>\n",
+       "      <td>433.8441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1688764397615</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.4306</td>\n",
+       "      <td>-182.3223</td>\n",
+       "      <td>0.196709</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.7865</td>\n",
+       "      <td>-253.6344</td>\n",
+       "      <td>243.8532</td>\n",
+       "      <td>-182.0499</td>\n",
+       "      <td>-271.015000</td>\n",
+       "      <td>351.020150</td>\n",
+       "      <td>-138.149700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1156.576</td>\n",
+       "      <td>433.8441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1688764397632</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.4555</td>\n",
+       "      <td>-182.2124</td>\n",
+       "      <td>0.232401</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.7698</td>\n",
+       "      <td>-253.6509</td>\n",
+       "      <td>243.8649</td>\n",
+       "      <td>-181.9426</td>\n",
+       "      <td>-270.890586</td>\n",
+       "      <td>351.011329</td>\n",
+       "      <td>-138.413957</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1156.836</td>\n",
+       "      <td>433.9571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1688764397648</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.4782</td>\n",
+       "      <td>-182.0957</td>\n",
+       "      <td>0.269450</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.7520</td>\n",
+       "      <td>-253.6685</td>\n",
+       "      <td>243.8774</td>\n",
+       "      <td>-181.8287</td>\n",
+       "      <td>-270.766171</td>\n",
+       "      <td>351.002507</td>\n",
+       "      <td>-138.678214</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.099</td>\n",
+       "      <td>434.0718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1688764397665</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>347.4990</td>\n",
+       "      <td>-181.9740</td>\n",
+       "      <td>0.307110</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.7334</td>\n",
+       "      <td>-253.6868</td>\n",
+       "      <td>243.8904</td>\n",
+       "      <td>-181.7098</td>\n",
+       "      <td>-270.755071</td>\n",
+       "      <td>351.018900</td>\n",
+       "      <td>-138.681686</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.191</td>\n",
+       "      <td>434.2069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Timestamp  Lap_Number  Position.x.  Position.y.  Position.z.  \\\n",
+       "0  1688764397516           0       -255.4     347.2258    -182.7814   \n",
+       "1  1688764397532           0       -255.4     347.2678    -182.7312   \n",
+       "2  1688764397548           0       -255.4     347.3063    -182.6703   \n",
+       "3  1688764397565           0       -255.4     347.3416    -182.5986   \n",
+       "4  1688764397582           0       -255.4     347.3739    -182.5163   \n",
+       "5  1688764397599           0       -255.4     347.4035    -182.4240   \n",
+       "6  1688764397615           0       -255.4     347.4306    -182.3223   \n",
+       "7  1688764397632           0       -255.4     347.4555    -182.2124   \n",
+       "8  1688764397648           0       -255.4     347.4782    -182.0957   \n",
+       "9  1688764397665           0       -255.4     347.4990    -181.9740   \n",
+       "\n",
+       "   Orientation.x.  Orientation.y.  Orientation.z.  Path_Deviation  \\\n",
+       "0        0.040416    0.000000e+00             0.0          1.8565   \n",
+       "1        0.057982    0.000000e+00             0.0          1.8488   \n",
+       "2        0.079175    0.000000e+00             0.0          1.8396   \n",
+       "3        0.103898   -3.000000e-08             0.0          1.8286   \n",
+       "4        0.131965    0.000000e+00             0.0          1.8161   \n",
+       "5        0.163051    0.000000e+00             0.0          1.8020   \n",
+       "6        0.196709    0.000000e+00             0.0          1.7865   \n",
+       "7        0.232401    0.000000e+00             0.0          1.7698   \n",
+       "8        0.269450    0.000000e+00             0.0          1.7520   \n",
+       "9        0.307110    0.000000e+00             0.0          1.7334   \n",
+       "\n",
+       "   Estimated_Path_Center.x.  Estimated_Path_Center.y.  \\\n",
+       "0                 -253.5652                  243.8041   \n",
+       "1                 -253.5728                  243.8095   \n",
+       "2                 -253.5819                  243.8160   \n",
+       "3                 -253.5927                  243.8236   \n",
+       "4                 -253.6051                  243.8324   \n",
+       "5                 -253.6190                  243.8423   \n",
+       "6                 -253.6344                  243.8532   \n",
+       "7                 -253.6509                  243.8649   \n",
+       "8                 -253.6685                  243.8774   \n",
+       "9                 -253.6868                  243.8904   \n",
+       "\n",
+       "   Estimated_Path_Center.z.  Gaze_Location.x.  Gaze_Location.y.  \\\n",
+       "0                 -182.4984       -271.063129        350.538543   \n",
+       "1                 -182.4494       -271.047086        350.699079   \n",
+       "2                 -182.3899       -271.031043        350.859614   \n",
+       "3                 -182.3199       -271.015000        351.020150   \n",
+       "4                 -182.2395       -271.015000        351.020150   \n",
+       "5                 -182.1493       -271.015000        351.020150   \n",
+       "6                 -182.0499       -271.015000        351.020150   \n",
+       "7                 -181.9426       -270.890586        351.011329   \n",
+       "8                 -181.8287       -270.766171        351.002507   \n",
+       "9                 -181.7098       -270.755071        351.018900   \n",
+       "\n",
+       "   Gaze_Location.z.  Subject   Gaze.x.   Gaze.y.  \n",
+       "0       -139.081971        1  1153.233  430.5623  \n",
+       "1       -138.771214        1  1154.365  431.6732  \n",
+       "2       -138.460457        1  1155.480  432.7673  \n",
+       "3       -138.149700        1  1156.576  433.8441  \n",
+       "4       -138.149700        1  1156.576  433.8441  \n",
+       "5       -138.149700        1  1156.576  433.8441  \n",
+       "6       -138.149700        1  1156.576  433.8441  \n",
+       "7       -138.413957        1  1156.836  433.9571  \n",
+       "8       -138.678214        1  1157.099  434.0718  \n",
+       "9       -138.681686        1  1157.191  434.2069  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_data_from_subjects():\n",
+    "    data = []\n",
+    "    files = os.listdir('../data/subjects-xy')\n",
     "\n",
-    "    \n",
-    "\n",
-    "    files = os.listdir('../data/subjects')\n",
+    "    for file in files:\n",
+    "        \n",
     "\n",
     "    return files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +423,7 @@
        " 'subject12_2.csv']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
