--- a/FinalProject/exploration/hierarchical_gaze.ipynb
+++ b/FinalProject/exploration/hierarchical_gaze.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "    for f in files:\n",
     "        data = pd.read_csv(folder + f, delimiter=\";\").to_numpy()\n",
-    "        positions = data[:,[2, 4]]\n",
+    "        positions = data[:,index]\n",
     "        dataset.append(positions)\n",
     "\n",
     "    return dataset"
@@ -35,11 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "358954.2"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataset = read_data_from_subjects()"
+    "positions = read_data_from_subjects([2, 4])\n",
+    "gaze_x = read_data_from_subjects(-2)\n",
+    "gaze_y = read_data_from_subjects(-1)\n",
+    "\n",
+    "gaze_x[1]\n",
+    "gaze_y[1]\n",
+    "\n",
+    "max(gaze_x[0])"
    ]
   },
   {
