--- a/FinalProject/exploration/hierarchical_gaze.ipynb
+++ b/FinalProject/exploration/hierarchical_gaze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,26 @@
     "        dataset.append(positions)\n",
     "\n",
     "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Full data acquired here:\n",
+    "dataset = pd.read_csv('../data/full_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaze_x = dataset['Gaze.x.'] / 2560\n",
+    "gaze_y = dataset['Gaze.y.'] / 1080"
    ]
   },
   {
@@ -73,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
