--- a/FinalProject/exploration/hierarchical_gaze.ipynb
+++ b/FinalProject/exploration/hierarchical_gaze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,22 +35,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Full data acquired here:\n",
-    "dataset = pd.read_csv('../data/full_data.csv')"
+    "dataset = pd.read_csv('../data/full_data.csv')\n",
+    "\n",
+    "#Dataset:\n",
+    "#Timestamp\n",
+    "#Lap_Number (0,1)\n",
+    "#Position.x., Position.y., Position.z.\n",
+    "#Orientation.y. (0-360, yaw rotation)\n",
+    "#Gaze_Location.x., .y., .z. (original 3D gaze point)\n",
+    "#Subject\n",
+    "#Gaze.x. (0-2560, screen-relative gaze coord)\n",
+    "#Gaze.y. (0-1080, screen-relative gaze coord)\n",
+    "#d_ang (change in Orientation.y.)\n",
+    "#ang_accel (change in d_ang)\n",
+    "#Gate_N (Upcoming gate #, can substitute for gaze point)\n",
+    "#Ang_Pos (-360:360, angle between Orientation.y. and normal vector of upcoming gate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Normalize (x,y) to 0-1\n",
     "gaze_x = dataset['Gaze.x.'] / 2560\n",
-    "gaze_y = dataset['Gaze.y.'] / 1080"
+    "gaze_y = dataset['Gaze.y.'] / 1080\n",
+    "\n",
+    "gaze_x.max(), gaze_y.max()"
    ]
   },
   {
