--- a/FinalProject/preprocessing/generate_approach_series.Rmd
+++ b/FinalProject/preprocessing/generate_approach_series.Rmd
@@ -92,8 +92,7 @@ write.csv(all_gates, "all_gates.csv", row.names=FALSE)
 
 #main
 ```{r}
-#all_gates <- read.csv("gate_orients.csv")
-#all_gates$Angle_Deg <- all_gates$Angle * 180 / pi
+gates <- read.csv("gateOriginalConfig.csv")
 
 full_data <- data.frame()
 
@@ -134,198 +133,34 @@ for (i in 1:length(files)) {
     
     pos$Gate_N[is.na(pos$Gate_N)] <- 1
     
-    pos$Ang_Pos <- 180 - (pos$Orientation.y. + pos$Gate_Ang)
-    pos <- na.omit(pos)
+    pos <- subset(pos, Gaze.x. > 0 & Gaze.y. > 0 & Gaze.x. < 2560 & Gaze.y. < 1080)
+    pos <- pos[,-c(4, 16, 17)]
+    
+    for (i in 1:32) {
+      pos$Gate.x.[pos$Gate_N==i] <- gates$X[i]
+      pos$Gate.z.[pos$Gate_N==i] <- gates$Z[i]
+    }
 
+    temp <- pos
+    temp$Position.x <- pos$Position.x. + 600
+    temp$Position.z. <- pos$Position.z. + 600
+    temp$Gate.x. <- pos$Gate.x. + 600
+    temp$Gate.z. <- pos$Gate.z. + 600
+    
+    x1 <- c(NA, temp$Position.x.[1:(nrow(temp)-1)]) - temp$Position.x.
+    z1 <- c(NA, temp$Position.z.[1:(nrow(temp)-1)]) - temp$Position.z.
+    x2 <- temp$Gate.x. - temp$Position.x.
+    z2 <- temp$Gate.z. - temp$Position.z.
+    
+    mag <- sqrt((x2 - temp$Position.x.)^2 + (z2 - temp$Position.z.)^2)
+    
+    pos$Ang_Pos <- acos((x1 * x2 + z1 * z2)/mag)
+    pos$Ang_Pos <- (pos$Ang_Pos * 180 / pi) - 90
+    
     full_data <- rbind(full_data, pos)
   }
 }
 
-write.csv(full_data, "full_data.csv", row.names=FALSE)
-
-write.csv(full_data[, c(6, 11:14, 17)], "slim_data.csv", row.names=FALSE)
+write.table(full_data, "full_data.csv", row.names=FALSE, quote=FALSE, sep=';')
 
 ```
-
-
-
-#main chunk
-```{r}
-#set these to the correct values for the given experiment -------------------------------------------------------------
-setwd("../../../subjects exp 1.1/Exp1.1_Sp23_PilotTestFull")
-
-participants <- list.files(pattern="P_")
-#for (i in 3:length(participants)) {
-for (i in 1:2) {
-  setwd(participants[i])
-  setwd("S001")
-  
-  conditions <- read.csv("conditions.csv")
-  
-  #initialize the output dataframe
-  output <- data.frame(matrix(nrow=0, ncol=11))
-  colnames(output) <- c("Subject","Lap","Timestamp","LookaheadCondition","OrientationCondition",
-                        "Position(x)","Position(z)","Orientation(y)",
-                        "Upcoming_Gate","Upcoming_Passed","Upcoming_Collided")
-  
-  #loop through every trial for the subject
-  trial <- list.files(pattern="Flight Data")
-  for (k in 1:length(trial)) {
-
-    setwd(trial[k])
-    setwd(list.files(pattern="GaiaTest"))
-    
-    position_data <- read.delim(list.files(pattern="drone_capture"))
-    #position_data <- read.delim(list.files(pattern="drone_zeroes"))
-    gate_data <- read.delim("gate_data.txt")
-    obstacle_data <- read.delim("obstacle_data.txt")
-
-    #fix obstacle data
-    vars <- colnames(obstacle_data)
-    vars <- vars[-1]
-    obstacle_data <- obstacle_data[,-8]
-    colnames(obstacle_data) <- vars
-    
-    for (row in 1:nrow(obstacle_data)) {
-      gate_name <- str_split_1(rownames(obstacle_data[row,]), pattern=" ")
-      obstacle_data$Gate_Num[row] <- gate_name[2]
-    }
-    obstacle_data$Gate_Num <- as.numeric(obstacle_data$Gate_Num)
-    obstacle_data <- obstacle_data[order(obstacle_data$Gate_Num),]
-    obstacle_data <- obstacle_data[-c(1),]
-    
-    #omit still frames (e.g. during calibration)
-    df <- calculate_distance(position_data)
-    distanceTraveled <- df$distance
-    position_data <- position_data[!is.na(distanceTraveled),]
-    df <- na.omit(df)
-
-    #split into two laps
-    position_one <- subset(position_data, position_data$Lap_Number==0)
-    position_two <- subset(position_data, position_data$Lap_Number==1)
-    split <- nrow(position_one)
-    
-    gates_one <- subset(gate_data, gate_data$Lap==0)
-    gates_two <- subset(gate_data, gate_data$Lap==1)
-  
-    #add distance and remove resets in each lap
-    if (nrow(position_one) > 0) {
-      position_one <- cbind(position_one, df[1:nrow(position_one),])
-      rownames(position_one) <- c(1:nrow(position_one))
-      
-      check <- subset(position_one, Position.x. == -255.4 &
-                    Position.y. == 261 & Position.z. == -182.9)
-      if (nrow(check) != 0) {
-        row <- as.numeric(rownames(check)[nrow(check)])
-        position_one <- position_one[-c(1:row),]
-      }
-    }
-    
-    if (nrow(position_two) > 0) {
-      position_two <- cbind(position_two, df[(split+1):nrow(position_data),])
-      rownames(position_two) <- c(1:nrow(position_two))
-      
-      check <- subset(position_two, Position.x. == -255.4 &
-                    Position.y. == 261 & Position.z. == -182.9)      
-      if (nrow(check) != 0) {
-        row <- as.numeric(rownames(check)[nrow(check)])
-        position_two <- position_two[-c(1:row),]
-      }
-    }
-    rm(df)
-    
-    ###################################################################################
-
-    if (nrow(position_one) > 0) {
-      
-      one <- data.frame(matrix(0, nrow=nrow(position_one), ncol=11))
-      colnames(one) <- colnames(output)
-      one$Subject <- participants[i]
-      
-      #make gate index start at 1 instead of 0
-      gates_one$Gate <- gates_one$Gate + 1
-      
-      #start filling output dataframe
-      one$Timestamp <- position_one$Timestamp
-      one$Lap <- position_one$Lap_Number[1]
-      one$LookaheadCondition <- conditions$lookaheadCondition[k]
-      one$OrientationCondition <- conditions$orientationCondition[k]
-      
-      one$'Position(x)' <- position_one$Position.x.
-      one$'Position(z)' <- position_one$Position.z.
-      one$'Orientation(y)' <- position_one$Orientation.y.
-      
-      #segment position by gate being approached
-      prev_passage <- 1
-      
-      for (gate in 1:32) {
-
-          passed <- find_passage_point(prev_passage, position_one, obstacle_data[gate,])
-
-          passed <- as.integer(passed)
-
-          one$Upcoming_Gate[prev_passage:passed] <- gate
-          one$Upcoming_Passed[prev_passage:passed] <- gates_one$Passed[gate]
-          one$Upcoming_Collided[prev_passage:passed] <- gates_one$Collided[gate]
-
-          prev_passage <- passed+1
-
-      }
-
-      output <- rbind(output, one)
-    }
-    
-    ###################################################################################
-    
-    if ((nrow(position_two) > 0)  & !(i==5 & k==5)) {
-      
-      two <- data.frame(matrix(0, nrow=nrow(position_two), ncol=11))
-      colnames(two) <- colnames(output)
-      two$Subject <- participants[i]
-      
-      #make gate index start at 1 instead of 0
-      gates_two$Gate <- gates_two$Gate + 1
-      
-      #start filling output dataframe
-      two$Timestamp <- position_two$Timestamp
-      two$Lap <- position_two$Lap_Number[1]
-      two$LookaheadCondition <- conditions$lookaheadCondition[k]
-      two$OrientationCondition <- conditions$orientationCondition[k]
-      
-      two$'Position(x)' <- position_two$Position.x.
-      two$'Position(z)' <- position_two$Position.z.
-      two$'Orientation(y)' <- position_two$Orientation.y.
-      
-      #segment position by gate being approached
-      prev_passage <- 1
-      
-      for (gate in 1:32) {
-
-          passed <- find_passage_point(prev_passage, position_two, obstacle_data[gate,])
-          
-          passed <- as.integer(passed)
-  
-          two$Upcoming_Gate[prev_passage:passed] <- gate
-          two$Upcoming_Passed[prev_passage:passed] <- gates_two$Passed[gate]
-          two$Upcoming_Collided[prev_passage:passed] <- gates_two$Collided[gate]
-            
-          prev_passage <- passed+1
-
-      }
-
-      output <- rbind(output, two)
-    }
-  
-    setwd("../..")
-  }
-  
-  setwd("..")
-  
-  #output .csv file
-  write.csv(output, "gate_approach2.txt")
-  
-  setwd("..")
-}
-#}
-```
-
