Preparing for dataset reduction in Stan notebook

--- a/FinalProject/exploration/stan_gaze.ipynb
+++ b/FinalProject/exploration/stan_gaze.ipynb
@@ -485,6 +485,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset is too big. Needs some reduction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
