--- a/FinalProject/exploration/hierarchical_gaze_stan.ipynb
+++ b/FinalProject/exploration/hierarchical_gaze_stan.ipynb
@@ -39,6 +39,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset:\n",
+    "\n",
+    "* Timestamp\n",
+    "* Lap_Number (0,1)\n",
+    "* Position.x., Position.y., Position.z.\n",
+    "* Orientation.y. (0-360, yaw rotation)\n",
+    "* Gaze_Location.x., .y., .z. (original 3D gaze point)\n",
+    "* Subject\n",
+    "* Gaze.x. (0-2560, screen-relative gaze coord)\n",
+    "* Gaze.y. (0-1080, screen-relative gaze coord)\n",
+    "* d_ang (change in Orientation.y.)\n",
+    "* ang_accel (change in d_ang)\n",
+    "* Gate_N (Upcoming gate #, can substitute for gaze point)\n",
+    "* Gate_Ang (Gate orientation in world coordinates)\n",
+    "* Ang_Pos (0:360, angle between Orientation.y. and normal vector of upcoming gate)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
