--- a/FinalProject/exploration/hierarchical_gaze_stan.ipynb
+++ b/FinalProject/exploration/hierarchical_gaze_stan.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISPLAY_X, DISPLAY_Y = 2560, 1080"
+    "DISPLAY_X, DISPLAY_Y = 2560, 1080\n",
+    "#fix the problems :)"
    ]
   },
   {
