--- a/FinalProject/gaze_stan.ipynb
+++ b/FinalProject/gaze_stan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,226 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "DISPLAY_X, DISPLAY_Y = 2560, 1080"
+    "## DreamDrone\n",
+    "**Bayesian hierarchical modeling of trajectory-dependent gaze behaviors in multi-waypoint virtual drone steering**\n",
+    "\n",
+    "In this notebook, we investigate the relationship between waypoint position and gaze behaviors in virtual drone steering. We construct a hierarchical Bayesian linear regression model that allows us to examine gaze behavior with some baseline consideration of individual differences. Through this model, we would be able to estimate and predict gaze behavior based upon relative waypoint positions.\n",
+    "\n",
+    "by **Jerry Huang** and **AJ Jensen**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset\n",
+    "\n",
+    "Our dataset come from a recently-submitted manuscript by Jansen and Fajen (2024). In this dataset, the virtual drone steering behavior of 15 subjects are recorded along with their gaze position data. These data serve as the basis for our model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Lap_Number</th>\n",
+       "      <th>Position.x.</th>\n",
+       "      <th>Position.z.</th>\n",
+       "      <th>Orientation.y.</th>\n",
+       "      <th>Gaze_Location.x.</th>\n",
+       "      <th>Gaze_Location.y.</th>\n",
+       "      <th>Gaze_Location.z.</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Gaze.x.</th>\n",
+       "      <th>Gaze.y.</th>\n",
+       "      <th>d_ang</th>\n",
+       "      <th>ang_accel</th>\n",
+       "      <th>Gate_N</th>\n",
+       "      <th>Gate.x.</th>\n",
+       "      <th>Gate.z.</th>\n",
+       "      <th>Ang_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1688764397682</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>-181.8494</td>\n",
+       "      <td>-3.000000e-08</td>\n",
+       "      <td>-270.743971</td>\n",
+       "      <td>351.035293</td>\n",
+       "      <td>-138.685157</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.282</td>\n",
+       "      <td>434.3420</td>\n",
+       "      <td>-1.764706e-07</td>\n",
+       "      <td>2.209487e-06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-261.2452</td>\n",
+       "      <td>-135.0596</td>\n",
+       "      <td>0.654205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1688764397699</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>-181.7235</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-270.748529</td>\n",
+       "      <td>351.077679</td>\n",
+       "      <td>-138.680800</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.288</td>\n",
+       "      <td>434.6814</td>\n",
+       "      <td>-1.764706e-07</td>\n",
+       "      <td>3.604383e-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-261.2452</td>\n",
+       "      <td>-135.0596</td>\n",
+       "      <td>0.659015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1688764397715</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>-181.5985</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-270.753086</td>\n",
+       "      <td>351.120064</td>\n",
+       "      <td>-138.676443</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.295</td>\n",
+       "      <td>435.0208</td>\n",
+       "      <td>-9.803922e-09</td>\n",
+       "      <td>3.604383e-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-261.2452</td>\n",
+       "      <td>-135.0596</td>\n",
+       "      <td>0.652319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1688764397732</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>-181.4766</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-270.460614</td>\n",
+       "      <td>351.141679</td>\n",
+       "      <td>-138.868614</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1159.131</td>\n",
+       "      <td>435.3366</td>\n",
+       "      <td>-9.803922e-09</td>\n",
+       "      <td>-1.099337e-06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-261.2452</td>\n",
+       "      <td>-135.0596</td>\n",
+       "      <td>0.634254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1688764397748</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-255.4</td>\n",
+       "      <td>-181.3582</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-270.292557</td>\n",
+       "      <td>351.172114</td>\n",
+       "      <td>-138.796529</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1160.693</td>\n",
+       "      <td>435.5298</td>\n",
+       "      <td>-9.803922e-09</td>\n",
+       "      <td>-6.127451e-08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-261.2452</td>\n",
+       "      <td>-135.0596</td>\n",
+       "      <td>0.614264</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Timestamp  Lap_Number  Position.x.  Position.z.  Orientation.y.  \\\n",
+       "0  1688764397682           0       -255.4    -181.8494   -3.000000e-08   \n",
+       "1  1688764397699           0       -255.4    -181.7235    0.000000e+00   \n",
+       "2  1688764397715           0       -255.4    -181.5985    0.000000e+00   \n",
+       "3  1688764397732           0       -255.4    -181.4766    0.000000e+00   \n",
+       "4  1688764397748           0       -255.4    -181.3582    0.000000e+00   \n",
+       "\n",
+       "   Gaze_Location.x.  Gaze_Location.y.  Gaze_Location.z.  Subject   Gaze.x.  \\\n",
+       "0       -270.743971        351.035293       -138.685157        1  1157.282   \n",
+       "1       -270.748529        351.077679       -138.680800        1  1157.288   \n",
+       "2       -270.753086        351.120064       -138.676443        1  1157.295   \n",
+       "3       -270.460614        351.141679       -138.868614        1  1159.131   \n",
+       "4       -270.292557        351.172114       -138.796529        1  1160.693   \n",
+       "\n",
+       "    Gaze.y.         d_ang     ang_accel  Gate_N   Gate.x.   Gate.z.   Ang_Pos  \n",
+       "0  434.3420 -1.764706e-07  2.209487e-06       1 -261.2452 -135.0596  0.654205  \n",
+       "1  434.6814 -1.764706e-07  3.604383e-09       1 -261.2452 -135.0596  0.659015  \n",
+       "2  435.0208 -9.803922e-09  3.604383e-09       1 -261.2452 -135.0596  0.652319  \n",
+       "3  435.3366 -9.803922e-09 -1.099337e-06       1 -261.2452 -135.0596  0.634254  \n",
+       "4  435.5298 -9.803922e-09 -6.127451e-08       1 -261.2452 -135.0596  0.614264  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullset = pd.read_csv('data/full_data2.csv', sep=';')\n",
+    "fullset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Key Items**\n",
+    "| Item      | Symbol | Meaning      |\n",
+    "| ------------- | ------ | ------------- |\n",
+    "| Lap_Number | $L = 0, 1$ | Index of lap along the trajectory taken by the subject (0 and 1) | \n",
+    "| Subject | $j = 1, ..., J$ | Subject identifier ($J=15$)|\n",
+    "| Gaze.x./y. | $\\mathbf{x}_j = (x_j, y_j)$ | Screen-relative gaze coordinates for each subject $j$ |\n",
+    "| Ang_Pos | $\\theta_m$ | Angular position between Orientation.y. and normal vector of upcoming gate |\n",
+    "| Gate_N | $m = 1, ..., M$ | Gate (waypoint) identifier ($M=32$) |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +249,109 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Dataset:\n",
-    "\n",
-    "* Timestamp\n",
-    "* Lap_Number (0,1)\n",
-    "* Position.x., Position.y., Position.z. (drone position in world)\n",
-    "* Orientation.y. (0-360, yaw rotation)\n",
-    "* Gaze_Location.x., .y., .z. (original 3D gaze point)\n",
-    "* Subject\n",
-    "* Gaze.x. (0-2560, screen-relative gaze coord)\n",
-    "* Gaze.y. (0-1080, screen-relative gaze coord)\n",
-    "* d_ang (change in Orientation.y.)\n",
-    "* ang_accel (change in d_ang)\n",
-    "* Gate_N (Upcoming gate #, can substitute for gaze point)\n",
-    "* Gate.x., .z. (Gate_N position in world)\n",
-    "* Ang_Pos (0:360, angle between Orientation.y. and normal vector of upcoming gate)"
+    "# Display resolution\n",
+    "DISPLAY_X, DISPLAY_Y = 2560, 1080"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lap_Number</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Gaze.x.</th>\n",
+       "      <th>Gaze.y.</th>\n",
+       "      <th>Ang_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.282</td>\n",
+       "      <td>434.3420</td>\n",
+       "      <td>0.654205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.288</td>\n",
+       "      <td>434.6814</td>\n",
+       "      <td>0.659015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1157.295</td>\n",
+       "      <td>435.0208</td>\n",
+       "      <td>0.652319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1159.131</td>\n",
+       "      <td>435.3366</td>\n",
+       "      <td>0.634254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1160.693</td>\n",
+       "      <td>435.5298</td>\n",
+       "      <td>0.614264</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Lap_Number  Subject   Gaze.x.   Gaze.y.   Ang_Pos\n",
+       "0           0        1  1157.282  434.3420  0.654205\n",
+       "1           0        1  1157.288  434.6814  0.659015\n",
+       "2           0        1  1157.295  435.0208  0.652319\n",
+       "3           0        1  1159.131  435.3366  0.634254\n",
+       "4           0        1  1160.693  435.5298  0.614264"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(5)"
    ]
   },
   {
@@ -81,6 +375,13 @@
    "source": [
     "dataset.head(5)\n",
     "dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we plot the gaze position by screen coordinates for a subject."
    ]
   },
   {
@@ -153,6 +454,13 @@
     "plt.ylabel(\"\")\n",
     "plt.title(\"Y-Gaze distribution\")\n",
     "ax.set_xlim(-0.5, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we plot this together to distinguish between population and individuals."
    ]
   },
   {
@@ -232,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the dataset is so large, we subset to grab only one lap from each subject, and every tenth frame."
+    "Since the dataset is so large, we use the data for Lap 1 as our training set, and sample every 10th frame. We then standardize it."
    ]
   },
   {
@@ -273,10 +581,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hierarchical Linear Regression\n",
+    "### Model\n",
+    "\n",
+    "We use a random-intercept partial-pooling scheme for our hierarchical model, creating conditional prior for the mean of gaze positions for each subject. The model is defined as follows:\n",
     "\n",
     "\\begin{align}\n",
-    "    p_{n,j} &\\sim \\mathcal{N}(\\alpha_{j[n]} + \\mu_{j[n]} + \\beta_{j[n]}x_n, \\sigma).\n",
+    "    \\sigma_x &\\sim \\mathrm{Gamma}(2, 2), \\\\\n",
+    "    \\sigma_y &\\sim \\mathrm{Gamma}(0.5, 5), \\\\\n",
+    "    \\alpha_x, \\alpha_y &\\sim \\mathcal{N}(0, 5), \\\\\n",
+    "    \\beta_x, \\beta_y &\\sim \\mathcal{N}(0, 10), \\\\\n",
+    "    \\tau &\\sim \\mathrm{Cauchy(0, 5)}, \\\\\n",
+    "    u_j &\\sim \\mathcal{N}(0, \\tau), &\\text{for }j=1, ..., J, \\\\\n",
+    "    \\mathbf{x}_{nj} &\\sim \\mathcal{N}(\\alpha_{\\mathbf{x}} + u_j + \\beta_{\\mathbf{x}}\\theta_m, \\sigma_{\\mathbf{x}}), \\quad \\mathbf{x}_n = (x_n, y_n) &\\text{for }j=1, ..., J.\n",
     "\\end{align}"
    ]
   },
@@ -710,7 +1026,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we check efficiency, convergence, and some values"
+    "### Diagnosis\n",
+    "\n",
+    "Here we gather some summary statistics, check efficiency, convergence, and some values."
    ]
   },
   {
@@ -913,7 +1231,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, grab the predicted gaze data and compare it to actual gaze data."
+    "### Generative Performance\n",
+    "\n",
+    "We grab the predicted gaze data and compare it to actual gaze data."
    ]
   },
   {
@@ -1112,6 +1432,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictive performance\n",
+    "\n",
+    "Here we use the distribution of RMSE as our measure of predictive performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
@@ -1148,7 +1477,7 @@
     "ax.set_yticks([])\n",
     "ax.set_ylabel('')\n",
     "ax.set_xlabel('RMSE', fontsize=10)\n",
-    "ax.set_title('Generative Performance: X')"
+    "ax.set_title('Predictive Performance: X')"
    ]
   },
   {
@@ -1186,7 +1515,7 @@
     "ax.set_yticks([])\n",
     "ax.set_ylabel('')\n",
     "ax.set_xlabel('RMSE', fontsize=10)\n",
-    "ax.set_title('Generative Performance: Y')\n",
+    "ax.set_title('Predictive Performance: Y')\n",
     "ax.set_xlim(0, 100)"
    ]
   }
@@ -1207,7 +1536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
